<resources>
    <string name="app_name">practiceApp</string>
    <string name="image1">doctor</string>
    <string name="image2">circle01</string>
    <string name="image3">circle2</string>
    <string name="image4">login-background</string>
    <string name="password">Password</string>
    <string name="username" translatable="true">Username</string>
    <string name="login" translatable="true">Login</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="msg_to_login">Already have an account?</string>
    <string name="msg_to_signup">dont have any account?</string>
</resources>
