<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c4fff9"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="353dp"
        android:layout_height="572dp"
        android:contentDescription="@string/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226"
        app:srcCompat="@drawable/doctor" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="122dp"
        android:layout_height="128dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/cyan"
        android:contentDescription="@string/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageVie2"
        android:layout_width="59dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="136dp"
        android:background="@drawable/circle"
        android:backgroundTint="#64dfdf"
        android:contentDescription="@string/image3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/loginbackground"-->
<!--        android:layout_width="380dp"-->
<!--        android:layout_height="300dp"-->
<!--        android:layout_marginTop="400dp"-->
<!--        android:background="@drawable/loginbackground"-->
<!--        android:backgroundTint="#64dfdf"-->
<!--        android:contentDescription="@string/image4"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/loginbackground"
        android:backgroundTint="#64dfdf"
        android:paddingBottom="20dp"
        app:layout_constraintVertical_bias="0.863">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/baseline_account_circle_24"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>


        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/loginbackground"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/loginbackground"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#03A9F4"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>